--- a/Client/Views/ChatUC.xaml
+++ b/Client/Views/ChatUC.xaml
@@ -114,7 +114,7 @@
             <TextBlock DockPanel.Dock="Left" Margin="20,0,0,0" Text="{Binding Path=Chat.UserIsWriting}" FontSize="30" Foreground="{StaticResource WritingForeground}"/>
 
             <Image DockPanel.Dock="Right" Style="{StaticResource AvatarImageStyle}"/>
-            <Button IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Content="Edit chat" Margin="0,0,10,0" Height="40" Background="{StaticResource ButtonBackground}" Command="{Binding EditChatCommand}">
+            <Button IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Content="Edit chat" Margin="0,0,10,0" Height="40" Template="{StaticResource ButtonTemplate}" Command="{Binding EditChatCommand}">
                 <Button.Style>
                     <Style BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
                         <Style.Triggers>
@@ -125,7 +125,7 @@
                     </Style>
                 </Button.Style>
             </Button>
-            <Button DockPanel.Dock="Right" Content="Leave" Margin="0,0,10,0" Height="40" Style="{StaticResource ButtonStyle}" Command="{Binding LeaveChatCommand}"/>
+            <Button DockPanel.Dock="Right" Content="Leave" Margin="0,0,10,0" Height="40" Template="{StaticResource ButtonTemplate}" Command="{Binding LeaveChatCommand}"/>
 
             <CheckBox x:Name="canNotifyCheckBox" IsChecked="{Binding Path=CanNotify}" Cursor="Hand" IsThreeState="True" DockPanel.Dock="Right" Margin="0,0,10,0" Template="{StaticResource ModernCheckBox}" Command="{Binding CanNotifyChangedCommand}" Click="canNotifyCheckBox_Click"/>
 
@@ -182,7 +182,7 @@
                             Content="{Binding Path=InputMessage}"
                             ContentTemplateSelector="{StaticResource InputMessageTemplateSelector}"/>
 
-            <Button Grid.Column="1" Content="File" FontSize="20" IsEnabled="{Binding Path=Chat.CanWrite}" Background="{StaticResource ButtonBackground}" Foreground="{StaticResource ButtonForeground}" Command="{Binding OpenFileCommand}"/>
+            <Button Grid.Column="1" Content="File" FontSize="20" IsEnabled="{Binding Path=Chat.CanWrite}" Template="{StaticResource ButtonTemplate}" Command="{Binding OpenFileCommand}"/>
         </Grid>
     </Grid>
 
