--- a/Client/Views/EditGroupWindow.xaml
+++ b/Client/Views/EditGroupWindow.xaml
@@ -142,7 +142,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Path=Name}" FontSize="20" Height="40" Margin="10,0,0,0" />
-            <Button Grid.Column="1" Content="Save" Width="80" Height="30" Command="{Binding Path=SaveNameCommand}" Style="{StaticResource ButtonStyle}"/>
+            <Button Grid.Column="1" Content="Save" Width="80" Height="30" Template="{StaticResource ButtonTemplate}" Command="{Binding SaveNameCommand}"/>
         </Grid>
 
         <TextBox Grid.Row="1" Grid.Column="1" 
@@ -168,7 +168,7 @@
                 Content="Show more"
                 Width="200" Height="30"
                 Command="{Binding ShowMoreCommand}"
-                Style="{StaticResource ButtonStyle}">
+                Template="{StaticResource ButtonTemplate}">
         </Button>
     </Grid>
 </metro:MetroWindow>
