--- a/Client/Views/EditGroupWindow.xaml
+++ b/Client/Views/EditGroupWindow.xaml
@@ -142,13 +142,13 @@
             </Grid.ColumnDefinitions>
 
             <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding Path=Name}" FontSize="20" Height="40" Margin="10,0,0,0" />
-            <Button Grid.Column="1" Content="Save" Width="80" Height="30" Template="{StaticResource ButtonTemplate}" Command="{Binding SaveNameCommand}"/>
+            <Button Grid.Column="1" Content="Save" Width="80" Template="{StaticResource ButtonTemplate}" Command="{Binding SaveNameCommand}" Margin="10"/>
         </Grid>
 
         <TextBox Grid.Row="1" Grid.Column="1" 
                      Text="{Binding Path=SearchUsersText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="20"
                      metro:TextBoxHelper.ClearTextButton="True"
-                     Margin="10,0" Height="45"
+                     Margin="10,8,98,8" Height="45"
                      Background="LightGoldenrodYellow">
             <TextBox.InputBindings>
                 <KeyBinding Key="Enter" Command="{Binding TextBoxSearch_EnterPressedCommand}"/>
@@ -166,9 +166,10 @@
 
         <Button Grid.Row="3" Grid.Column="1"
                 Content="Show more"
-                Width="200" Height="30"
+                Width="200" Height="45"
                 Command="{Binding ShowMoreCommand}"
                 Template="{StaticResource ButtonTemplate}">
         </Button>
+        <Button Grid.Column="1" Grid.Row="1" Content="Search" Width="80" Height="45" VerticalAlignment="Center" Template="{StaticResource ButtonTemplate}" Command="{Binding SearchNameCommand}" Margin="306,8,10,7"/>
     </Grid>
 </metro:MetroWindow>
