added DialogWindow instead MessageBox please use: new DialogWindow(title, message).ShowDialog();

--- a/Client/Views/DialogWindow.xaml
+++ b/Client/Views/DialogWindow.xaml
@@ -3,10 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Client.Views"
         mc:Ignorable="d"
-        Title="DialogWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="DialogWindow" Height="250" Width="450">
+    <Window.Resources>
+        <ResourceDictionary Source="/WindowResources/ThemeDictionary.xaml"/>
+    </Window.Resources>
+
+    <Grid Background="{StaticResource MainBackground}">
+        <TextBlock x:Name="message" Foreground="{StaticResource ButtonBackground}" TextWrapping="Wrap" FontSize="25" VerticalAlignment="Center" Margin="20,0,0,60"/>
+
+        <Button Template="{StaticResource ButtonTemplate}" Width="110" Height="40" Content="Ok" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="20"/>
     </Grid>
 </Window>
