--- a/Client/WindowResources/ThemeDictionary.xaml
+++ b/Client/WindowResources/ThemeDictionary.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <FontFamily x:Key="EmojiFontFamily">/Resources/#Seguiemj</FontFamily>
+
     <SolidColorBrush x:Key="ChatForeground" Color="#eab586"/>
     <SolidColorBrush x:Key="HamburgerBackground" Color="#57394a"/>
     <SolidColorBrush x:Key="MainBackground2" Color="#eab586"/>
