--- a/Client/Views/EditGroupWindow.xaml
+++ b/Client/Views/EditGroupWindow.xaml
@@ -150,9 +150,6 @@
                      metro:TextBoxHelper.ClearTextButton="True"
                      Margin="10,8,98,8" Height="45"
                      Background="LightGoldenrodYellow">
-            <TextBox.InputBindings>
-                <KeyBinding Key="Enter" Command="{Binding TextBoxSearch_EnterPressedCommand}"/>
-            </TextBox.InputBindings>
         </TextBox>
 
         <ListView Grid.Row="2" Grid.Column="1"
@@ -170,6 +167,6 @@
                 Command="{Binding ShowMoreCommand}"
                 Template="{StaticResource ButtonTemplate}">
         </Button>
-        <Button Grid.Column="1" Grid.Row="1" Content="Search" Width="80" Height="45" VerticalAlignment="Center" Template="{StaticResource ButtonTemplate}" Command="{Binding SearchNameCommand}" Margin="306,8,10,7"/>
+        <Button Command="{Binding SearchByNameInDB}" Grid.Column="1" Grid.Row="1" Content="Search" Width="80" Height="45" VerticalAlignment="Center" Template="{StaticResource ButtonTemplate}" Margin="306,8,10,7"/>
     </Grid>
 </metro:MetroWindow>
